--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,11 @@
     <string name="remove_bookmark">Remove Bookmark</string>
     <string name="movie_unsaved">Movie is removed from bookmarks</string>
     <string name="empty">Empty</string>
+    <string name="try_again">Try again</string>
+    <string name="internet_error_please_check_your_connection">Internet error, Please check your connection</string>
+    <string name="release_date">Release Date</string>
+    <string name="rating">Rating</string>
+    <string name="runtime">Runtime</string>
 
 
 </resources>
